--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-315.5KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-17.04MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.35MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-12.03MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.69MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-6.37MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-360.8KB/s(Youtube:不良林), server: scloud51.jafiyun.life, port: 22051, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud51.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-724.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇨🇳 中国-599.8KB/s(Youtube:不良林), server: data-hk-v2.shwjfkw.cn, port: 50205, type: vmess, uuid: b1478e24-4916-3abe-8f17-15931012ecbe, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: data-hk-v2.shwjfkw.cn}}
-  - {name: 🇭🇰 香港-925.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇨🇳 中国-3.44MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 匈牙利-1.90MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.96MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: 142.202.48.74, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-607.1KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-315.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-724.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-599.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-925.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 匈牙利-1.90MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-315.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-724.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-599.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-925.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 匈牙利-1.90MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-315.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-724.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-599.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-925.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 匈牙利-1.90MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-925.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-315.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-724.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-599.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-925.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 匈牙利-1.90MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-315.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-724.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-599.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-925.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 匈牙利-1.90MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-315.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-724.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-599.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-925.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 匈牙利-1.90MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-315.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.04MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-12.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.69MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-724.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-599.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-925.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.44MB/s(Youtube:不良林)
       - 匈牙利-1.90MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-607.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
