--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: f5362b9a-812f-4d77-89a3-09f7d0851bfb, sni: 67us01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-479.3KB/s(Youtube:不良林), server: scloud51.jafiyun.life, port: 22051, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud51.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-745.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.17MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
-  - {name: 🇺🇸 美国-360.4KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-616.3KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-183.3KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.05MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-19.40MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-3.06MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-14.16MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.43MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-616.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-616.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-616.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-616.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-616.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-616.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-616.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
