--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: 104.149.154.154, port: 25966, type: vmess, uuid: ca06e0f0-ca6e-418f-800d-97b23ba51bca, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /VTd4o3Kj/, ws-headers: {Host: 104.149.154.154}}
-  - {name: 🇸🇬 新加坡-183.3KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.05MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-19.40MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-3.06MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-14.16MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.43MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-170.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇸🇬 新加坡-183.3KB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.98MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.95MB/s(Youtube:不良林), server: hk6.ningmengshui.xyz, port: 80, type: vmess, uuid: 0c220535-7e29-42c8-b247-c08aaf8ebc73, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk6.ningmengshui.xyz}}
+  - {name: 🇺🇸 美国-9.93MB/s(Youtube:不良林), server: hk6.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk6.ningmengshui.xyz}}
+  - {name: 🇫🇷 法国-2.77MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-2.24MB/s(Youtube:不良林), server: 172.104.182.226, port: 80, type: vmess, uuid: 3849e48e-f276-4612-a1b9-6f07d1ab1bad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /vpngiare.net, ws-headers: {Host: 172.104.182.226}}
+  - {name: 🇺🇸 美国-5.78MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.40MB/s(Youtube:不良林)
       - 🇰🇷 韩国-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇯🇵 日本-14.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-183.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.93MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.78MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
